<resources>
    <string name="app_name">My Dairy</string>

    <!--activity_daily_entry.xml-->
    <string name="enter_date">Enter your date</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="select_choice">Select your choice</string>
    <string name="enter_fat">Enter the fat</string>
    <string name="enter_amount">Enter the amount</string>
    <string name="enter_qty">Enter the quantity</string>
    <string name="save_dtl">Save</string>


    <!--activity_dan_khan_entry.xml-->
    <string name="pashudan_from_dairy">Pashudan (From Dairy)</string>
    <string name="pashudan_external">Pashudan (External)</string>
    <string name="makai_bhardo_own">Makai Bhardo (Own)</string>
    <string name="specify_dtl">Specify the details</string>
    <string name="pashuahar_othr">Pashuahar (Others)</string>
    <string name="papdi_external">Papdi (External)</string>
    <string name="makai_bhrdo_extrnl">Makai Bhardo (External)</string>


    <!--activity_dava_dary_entry.xml-->
    <string name="medicine_external">Medicine (External)</string>
    <string name="medical_visit_frm_dry">Medical Visit (From Dairy)</string>
    <string name="dose_extrnl">Dose (External)</string>
    <string name="dose_frm_dry">Dose (From Dairy)</string>
    <string name="medicl_visit_extrnl">Medical Visit (External)</string>


    <!--actviity_dev_inv.xml-->
    <string name="cow_prchse">Cow Purchase</string>
    <string name="cow_slng">Cow Selling</string>
    <string name="expansion">Expansion</string>


    <!--activity_email_login.xml-->
    <string name="sign_in">Sign in</string>
    <string name="enter_psswrd">Enter your password</string>
    <string name="forgot_psswrd">Forgot Password?</string>
    <string name="or">OR</string>


    <!--activity_email_register.xml-->
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter new password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="register">Register</string>
    <string name="already_account">Already have an account?</string>
    <string name="log_in">Log in</string>


    <!--activity_entry_dashboard.xml-->
    <string name="daily_entry">Daily Entry</string>
    <string name="dava_daru">Dava/Daru(E)</string>
    <string name="dan_khan">Dan/Khan(E)</string>
    <string name="labour_chrge">Labour Charge</string>
    <string name="roi">ROI</string>
    <string name="gass_charo">GassCharo</string>
    <string name="misc">Miscellaneous</string>
    <string name="investment">Investment</string>


    <!--activity_fat_graph.xml-->
    <string name="start_dte">Start Date</string>
    <string name="ddmmyyyy">DD/MM/YY</string>
    <string name="end_dte">End Date</string>
    <string name="search">Search</string>


    <!--activity_gass_charo_entry.xml-->
    <string name="sukocharo">Sukocharo</string>
    <string name="fertilizer">Fertilizers</string>
    <string name="seeds">Seeds</string>
    <string name="lilocharo">Lilocharo</string>
    <string name="tractr_chrge">Tractor Charge</string>
    <string name="unalu_sudhiyu">Unalu Sudhiyu</string>
    <string name="amount">Amount (Rs)</string>
    <string name="enter_here">Enter here</string>
    <string name="quantity">Quantity (Kg)</string>
    <string name="other">Other</string>
    <string name="sidhiyu">Sidhiyu</string>
    <string name="guvariyu">Guvariyu</string>
    <string name="makaiyu">Makaiyu</string>
    <string name="guno">Guno</string>
    <string name="type">Type: </string>


    <!--activity_graph_amt.xml-->
    <!--activity_graph_qty.xml-->

    <!--activity_labour_entry.xml-->
    <string name="enter_mnthly_slry">Enter the monthly salary (Rs)</string>
    <string name="entr_emnt_in_rs">Enter the amount in (Rs)</string>
    <string name="specify_type_of_wrk">Specify the type of work</string>
    <string name="other_wrk">Other Work</string>
    <string name="deposit_blnce">Deposit Balance</string>
    <string name="withdrwl_blnce">Withdrawal Balance</string>


    <!--dialog_box.xml-->
    <string name="welcome_dairy">Welcome to My-Dairy</string>
    <string name="select_language">Select Your Language: </string>
    <string name="next_dsgn">Next >></string>
    <string name="icon_desc">Icon of the App</string>


    <!--phone_login.xml-->
    <string name="enter_phn">Enter Phone Number</string>
    <string name="verify_phn">Verify Your Number</string>
    <string name="login_with_email">Login with email</string>
    <string name="login_with_phone_number">Login With Phone Number</string>





    <!--activity_user_details-->
    <string name="next">Next</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_surname">Enter your surname</string>
    <string name="enter_city">Enter your city</string>
    <string name="sign_up">Sign up with Email</string>
    <string name="title_activity_sidebar">Sidebar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_graph">Graph</string>
    <string name="menu_report">Report</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help &amp; Feedback</string>
    <string name="menu_share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="salary">Salary</string>
    <string name="signout">sign_out</string>
    <string name="reset_acc">reset_acc</string>

</resources>
