<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.mydairy.ui.Dashboard.HomeFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_graph"
        android:name="com.example.mydairy.ui.Graph.GalleryFragment"
        android:label="@string/menu_graph"
        tools:layout="@layout/fragment_graph" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.mydairy.ui.Report.SlideshowFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mydairy.Fragment.setting"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.mydairy.Fragment.share"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.mydairy.Fragment.help"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />


</navigation>