<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/title_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/welcome_dairy"
        android:textSize="30sp"
        android:fontFamily="@font/title_welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/primary_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/main_icon"
        app:layout_constraintTop_toBottomOf="@id/title_welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/icon_desc" />

    <TextView
        android:id="@+id/select_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/select_language"
        android:textColor="@color/hint_dark"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/main_image"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="15dp"
        />

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintTop_toBottomOf="@+id/select_language"
        android:layout_marginHorizontal="25dp"
        android:backgroundTint="@color/dark_blue"
        />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/next_dsgn"
        android:layout_marginTop="15dp"
        android:background="@color/primary_color"
        android:textColor="@color/white"
        android:fontFamily="@font/title_welcome"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language_spinner"
        />

</androidx.constraintlayout.widget.ConstraintLayout>