<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/side_nav_bar"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp"
        android:background="@color/white"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:contentDescription="@string/nav_header_desc"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/ic_launcher_round" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:fontFamily="@font/title_welcome"
        android:text="@string/nav_header_title"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/mail_phn_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/times_new_roman"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>