<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Details.UserDetails">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:paddingHorizontal="16sp"
        android:textSize="13sp"
        android:background="@drawable/input_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="19dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/enter_surname"
        android:inputType="textPersonName"
        android:paddingHorizontal="16sp"
        android:textSize="13sp"
        android:background="@drawable/input_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="19dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:paddingHorizontal="16sp"
        android:textSize="13sp"
        android:hint="@string/enter_city"
        android:inputType="textPersonName"
        android:background="@drawable/input_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="19dp"
        android:layout_marginTop="59dp"
        android:background="@drawable/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        />

</androidx.constraintlayout.widget.ConstraintLayout>